<resources>
    <string name="app_name">Skånetraffiken</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sok">Reseplaneraren</string>
    <string name="hallplatssok">Hållplatssök</string>
    <string name="biljetter">Biljetter</string>
    <string name="tidtabeller">Tidtabeller</string>

    <string-array
        name="favoritresor_array">
        <item>Favoritresor</item>
        <item>Example text</item>
    </string-array>

    <string-array
        name="bevakningar_array">
        <item>Bevakningar</item>
        <item>Example text</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fran">Från</string>
    <string name="till">Till</string>
    <string name="fyll">Fyll i stationnamn</string>
    <string name="tid_datum">Tid/Datum</string>
    <string name="justnu">Just nu</string>
    <string name="andra">Ändra</string>
    <string name="ankomst">Ankomst</string>
    <string name="avgang">Avgång</string>
    <string name="traffikslag">Traffikslag</string>
</resources>
