<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="larsstenstadvold.assignment_2.SearchFragment"
    android:orientation="vertical"
    android:layout_margin="12dp"
    android:showDividers="beginning|end"
    android:labelFor="@string/hello_world"
    android:divider="@drawable/abc_list_divider_mtrl_alpha">




    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="top">

            <TextView
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:text="@string/fran"
                android:id="@+id/textView_fran" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:id="@+id/editText"
                android:hint="@string/fyll" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:text="@string/till"
                android:id="@+id/textView_till" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:id="@+id/editText2"
                android:layout_weight="1"
                android:hint="@string/fyll" />
        </LinearLayout>
    </LinearLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:id="@+id/spinner"
        android:prompt="@string/hello_world"
        android:spinnerMode="dropdown"
        android:entries="@array/favoritresor_array"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tid_datum"
            android:id="@+id/textViewTid"
            android:layout_weight="1"/>


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/justnu"
            android:id="@+id/textView5"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/andra"
            android:id="@+id/button"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ankomst"
            android:id="@+id/radioButton"
            android:layout_weight="1"/>

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/avgang"
            android:id="@+id/radioButton2"
            android:layout_weight="1"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/traffikslag"
            android:id="@+id/textView6"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:padding="16dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/andra"
            android:id="@+id/button2"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:id="@+id/spinner2"
        android:entries="@array/bevakningar_array"/>

</LinearLayout>
